added management of category
