# src/api/dto/country.go
@@ -1,0 +1,11 @@
+package dto
+
+type CreateUpdateCountryRequest struct{
+	Name string `json:"name" binding:"required,alpha,min=3,max=20"`
+}
+
+type CountryResponse struct {
+	Id int `json:id`
+	Name string `json:name`
+}
+
